[package]
name = "vector_field_visualization"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2018"

[profile.release]
lto = "thin"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
ggez = "0.6.0-rc2"
log = "0.4.14"
noise = "0.7.0"
rand = "0.8.4"
svg = "0.10.0"
