[package]
name = "vector_field_visualization"
version = "0.2.0"
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]
edition = "2024"

[profile.release]
lto = "thin"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.14"
noise = "0.9.0"
rand = "0.9.0"
svg = "0.18.0"
macroquad = "0.4.14"
